# Astrosage-

./: .dockerignore  .env.example  .env.production  .gitignore  AI_AGENT_HANDBOOK.md  AI_KNOWLEDGE_CONTRACT.md  AI_MASTER_RESEARCH.md  ARCHITECTURE.md  ASTROSAGE_AI_MASTER_ROADMAP.md  BACKEND_API_AUDIT.md  BACKEND_ARCHITECTURE_REPORT.md  BACKEND_BLOCKERS.md  BACKEND_COMPONENT_INVENTORY.md  BACKEND_DEPLOYMENT_REPORT.md  BACKEND_EXECUTION_REPORT.md  BACKEND_FRONTEND_READINESS.md  BACKEND_PERFORMANCE_REPORT.md  BACKEND_RELIABILITY_REPORT.md  BACKEND_SCORECARD.md  BACKEND_SECURITY_REPORT.md  BRONZE_SILVER_AUDIT.md  CHANGELOG.md  CKU_COVERAGE_REPORT.md  CONNECTOR_VALIDATION.md  DEPLOYMENT.md  DUPLICATE_ANALYSIS.md  Dockerfile  FINAL_BENCHMARK_RESULTS.md  FINAL_CERTIFICATION.md  FINAL_ENGINEERING_REPORT.md  FINAL_EXECUTION_REPORT.md  FINAL_IMPROVEMENT_REPORT.md  FINAL_KNOWLEDGE_CERTIFICATION.md  FINAL_REPORT.md  FINAL_REPOSITORY_AUDIT.md  FINAL_RESEARCH_REPORT.md  FINAL_SCORECARD.md  KNOWLEDGE_FREEZE.md  KNOWLEDGE_GAP_ANALYSIS.md  KNOWN_LIMITATIONS.md  (+33 more)
.agent/: CURRENT_PHASE.md  PROJECT_STATE.md  TODO_NEXT.md
.ai/: KNOWLEDGE_VERSION.md
.astrosage/: CONFIG.md
adapters/: __init__.py
adrs/: ADR-001-document-extraction.md  ADR-002-embedding-model.md  ADR-003-vector-database.md  ADR-004-retrieval-strategy.md  ADR-005-grounding-policy.md  ADR-006-document-pipeline.md  ADR-007-forensic-validation.md  ADR-008-production-pipeline-lock.md  ADR-009-research-stack.md  ADR-010-knowledge-recovery-infrastructure.md
api/: __init__.py  config.py  dependencies.py  error_handlers.py  exceptions.py  logging.py  main.py
art_studio/: .gitignore  README.md  __init__.py  __main__.py  cli.py
commands/: __init__.py  known_commands.py  registry.py
config/: processing_tiers.json
contracts/: __init__.py  interfaces.py
core/: __init__.py  (+1 more)
(+4646 files in other folders)
