[project]
name = "astrosage-knowledge-engine"
version = "2.0.0"
description = "AstroSage Knowledge Operating System — a self-hosted, production-grade knowledge engine for indexing and querying Vedic texts, research papers, and books."
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Document extraction
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    
    # OCR
    "paddleocr>=2.9.0",
    "paddlepaddle>=2.6.0",
    "pytesseract>=0.3.10",
    "ocrmypdf>=16.0.0",
    
    # Document understanding
    "docling>=2.0.0",
    
    # Embeddings
    "sentence-transformers>=3.0.0",
    "FlagEmbedding>=1.2.0",
    
    # Vector database
    "qdrant-client>=1.9.0",
    "chromadb>=0.5.0",
    
    # Search
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.0.0",
    
    # MCP
    "mcp>=1.0.0",
    
    # Evaluation
    "ragas>=0.2.0",
    "deepeval>=2.0.0",
    
    # Utilities
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "aiofiles>=24.0.0",
    "aiohttp>=3.10.0",

    # API Layer (Phase 0)
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.5.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",

    # HTTP
    "httpx>=0.27.0",

    # Monitoring
    "prometheus-fastapi-instrumentator>=7.0.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
